--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
@@ -34,30 +34,32 @@
         @include flex-x(align-items, center);
         @include flex-x(justify-content, center);
         background-color: transparent;
-        height: rem(100px);
+        // height: rem(100px);
         display: flex;
         overflow: hidden;
         padding-top: 0;
 
-        @include media('>=xs') {
-          height: rem(160px);
-        }
-
-        @include media('>=sm') {
-          height: rem(200px);
-        }
-
-        @include media('>=md') {
-          height: rem(200px);
-        }
-
-        @include media('>=xl') {
-          height: rem(243px);
-        }
+        //@include media('>=xs') {
+        //  height: rem(160px);
+        //}
+        //
+        //@include media('>=sm') {
+        //  height: rem(200px);
+        //}
+        //
+        //@include media('>=md') {
+        //  height: rem(200px);
+        //}
+        //
+        //@include media('>=xl') {
+        //  height: rem(243px);
+        //}
 
         .media {
           display: flex;
-          height: 100%;
+          //height: 100%;
+          position: relative;
+          padding-top: 100%;
           width: 100%;
         }
 
@@ -66,6 +68,11 @@
           height: auto;
           width: 100%;
           border-radius: rem(11px);
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
 
           @include media('>=md') {
             border-radius: rem(25px);
