GW Updated image height ration to 1:1

--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
@@ -47,7 +47,7 @@
 
         .media img {
           object-fit: cover;
-          height: auto;
+          height: 100%;
           width: 100%;
           border-radius: rem(11px);
           position: absolute;
