Updated megamenu to reusable.

--- a/source/themes/custom/gearwrench/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/region/header.scss
@@ -294,8 +294,7 @@ $mobile-menu-item-button-height: 7rem;
       display: none;
     }
 
-    .all-tools-menu,
-    .featured-tools-menu {
+    .secondary-menu {
       flex: 1;
 
       .menu-item__panel-header {
@@ -305,15 +304,14 @@ $mobile-menu-item-button-height: 7rem;
         h5 {
           margin: 0;
           padding: 0;
+
+          a:hover {
+            text-decoration: underline;
+          }
         }
       }
 
-      .featured-tools-menu__menu-wrapper {
-        white-space: nowrap;
-      }
-
-      .all-tools-menu__content-container,
-      .featured-tools-menu__content-container {
+      .secondary-menu__content-container {
         display: flex;
         flex-direction: row;
 
@@ -323,8 +321,12 @@ $mobile-menu-item-button-height: 7rem;
       }
     }
 
-    .featured-tools-menu {
+    .secondary-menu.secondary-menu__first {
       background-color: $black;
+
+      .secondary-menu__menu-wrapper {
+        white-space: nowrap;
+      }
 
       .menu-item__panel-header {
         padding: 2.75rem 0 .5rem;
@@ -334,6 +336,10 @@ $mobile-menu-item-button-height: 7rem;
           color: $primary-orange;
           margin: 0;
           padding: 0;
+
+          a {
+            color: $primary-orange;
+          }
         }
       }
 
@@ -355,6 +361,16 @@ $mobile-menu-item-button-height: 7rem;
               text-decoration: none;
             }
           }
+        }
+      }
+    }
+
+    .secondary-menu:last-child {
+
+      h5 {
+
+        a {
+          color: $black;
         }
       }
     }
@@ -827,9 +843,10 @@ $mobile-menu-item-button-height: 7rem;
       }
 
       .menu-item__panel-image--depth-0 {
-        position: relative;
-        margin: 0 0 3.5rem;
+        background-color: $black;
         max-width: 356px;
+        padding: 2.75rem 55px 3.5rem 0;
+        position: relative;
         width: 100%;
 
         .media {
@@ -874,8 +891,8 @@ $mobile-menu-item-button-height: 7rem;
         }
       }
 
-      .featured-tools-menu {
-        flex: 1;
+      .secondary-menu.secondary-menu__first {
+        flex: 0.5;
         padding-right: 2rem;
 
         &::before {
@@ -889,11 +906,6 @@ $mobile-menu-item-button-height: 7rem;
           z-index: -1;
         }
 
-        .menu-item__panel-image--depth-0 {
-          margin: 2.75rem 1rem 3.5rem 0;
-          max-width: 356px;
-        }
-
         .menu-item__panel-header {
           padding: 2.75rem 0 1rem;
           width: 100%;
@@ -901,6 +913,10 @@ $mobile-menu-item-button-height: 7rem;
           h5 {
             margin: 0;
             padding: 0;
+
+            a {
+              color: $primary-orange;
+            }
           }
         }
 
@@ -909,8 +925,8 @@ $mobile-menu-item-button-height: 7rem;
         }
       }
 
-      .all-tools-menu {
-        flex: 2 1 auto;
+      .secondary-menu:last-child {
+        flex: 0.35 1 auto;
         padding-left: 2rem;
 
         .menu-item__panel-header {
@@ -923,20 +939,7 @@ $mobile-menu-item-button-height: 7rem;
           }
         }
 
-        .featured-tools-menu__content-container {
-          display: flex;
-          flex-direction: row;
-
-          ul.menu--depth-1 {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            padding: 0 0 3.5rem;
-            width: 100%;
-          }
-        }
-
-        .all-tools-menu__content-container {
+        .secondary-menu__content-container {
           display: flex;
           flex-direction: row;
 
@@ -1062,6 +1065,10 @@ $mobile-menu-item-button-height: 7rem;
 
             h5 {
               font-size: rem(22px);
+
+              a {
+                color: $primary-orange;
+              }
             }
           }
 
@@ -1073,17 +1080,6 @@ $mobile-menu-item-button-height: 7rem;
             padding-left: rem(20px);
 
             .menu-item__link {
-              color: $primary-orange;
-            }
-          }
-
-          .featured-tools-menu__menu-wrapper {
-            flex: 1;
-          }
-
-          .all-tools-menu {
-            .menu-item__panel-header,
-            .all-tools-menu__content-container .menu-item__link {
               color: $primary-orange;
             }
           }
