Updated preprocess for images to media variables, updated search-index twig with variables and restructured, updated search-index-product and search-index scss to match teaser product and other updates, updated search scss with input styling with icon, hid submit button and other results search field, added pager mobile line height, changed other results to ajax,

--- a/docroot/themes/custom/gearwrench/templates/node/node--search-index.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--search-index.html.twig
@@ -68,26 +68,32 @@
  * @ingroup themeable
  */
 #}
-{% set classes = [] %}
+{% set classes = [
+  'node',
+  'node--type-' ~ node.bundle|clean_class,
+  node.isPromoted() ? 'node--promoted',
+  node.isSticky() ? 'node--sticky',
+  not node.isPublished() ? 'node--unpublished',
+  view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+] %}
 
 <article{{ attributes.addClass(classes) }}>
   <div{{ inner_attributes }}>
     <div{{ content_attributes.addClass('node__content') }}>
       <a href="{{ url }}" rel="bookmark">
+        <div{{ media_attributes }}>
+          {{ media }}
+        </div>
         <div class="node__content-container">
           <header class="node__header">
             <div class="node__long-description">
-              <div{{ media_attributes }}>
-                {{ media }}
-              </div>
               <h3>
                 {{ label }}
               </h3>
             </div>
           </header>
-
-          <div>
-            {{ content|without('field_media') }}
+          <div class="node__summary">
+            {{ content }}
           </div>
         </div>
       </a>
