--- a/source/themes/custom/gearwrench/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/search-index--product.scss
@@ -29,31 +29,42 @@
       @include flex-x(align-items, center);
       @include flex-x(justify-content, center);
       background-color: $white;
-      height: 243px;
       display: flex;
       overflow: hidden;
-      padding-top: 2px;
+      padding-top: 0;
+      border: 2px solid $primary-orange;
 
-      @include media('<md') {
-        height: 160px;
-        padding-top: 0;
-        border: 2px solid $primary-orange;
+      @include media('>md') {
+        border: 0;
+        padding-top: 2px;
       }
 
       .media {
         display: flex;
-        height: 100%;
+        position: relative;
+        padding-top: 100%;
+        width: 100%;
 
         img {
           object-fit: cover;
-          height: auto;
+          height: 100%;
           width: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
         }
       }
     }
 
     .node__content-container {
       padding: 1rem;
+
+      @include media('<md') {
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
 
     .node__long-description {
@@ -63,14 +74,9 @@
         min-height: rem(120px);
       }
 
-      .media {
-        height: 241px;
-      }
-
       .field--name-field-long-description {
         @include type-header(h4, black, included);
-        margin-top: 1.5rem;
-        min-height: 12.1875rem;
+        margin-top: 0;
 
         @include media('<md') {
           font-size:  rem(16px);
@@ -99,10 +105,34 @@
     transition: $transition-base;
     width: 100%;
 
+    @include media('<md') {
+      white-space: normal;
+      min-width: 100%;
+    }
+
+    &.ps-disabled {
+      background-color: $gray-50;
+
+      > small {
+        line-height: 1.625;
+        font-weight: $fw-bold;
+
+        &:hover,
+        &:focus {
+          font-weight: $fw-bold;
+        }
+      }
+    }
+
     &:hover,
     &:focus {
       color: $primary-orange;
       background-color: $black;
+
+      &.ps-disabled > small {
+        line-height: 1.625;
+        font-weight: $fw-bold;
+      }
     }
   }
 
