--- a/source/themes/custom/gearwrench/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/search-index.scss
@@ -23,31 +23,40 @@
       @include flex-x(align-items, center);
       @include flex-x(justify-content, center);
       background-color: $white;
-      height: 243px;
       display: flex;
       overflow: hidden;
-      padding-top: 2px;
+      padding-top: 0;
 
-      @include media('<md') {
-        height: 160px;
-        padding-top: 0;
-        border: 2px solid $primary-orange;
+      @include media('>md') {
+        border: 0;
       }
 
       .media {
         display: flex;
-        height: 100%;
+        position: relative;
+        padding-top: 100%;
+        width: 100%;
 
         img {
           object-fit: cover;
-          height: auto;
+          height: 100%;
           width: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
         }
       }
     }
 
     .node__content-container {
       padding: 1rem;
+
+      @include media('<md') {
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
 
     .node__long-description {
@@ -57,14 +66,10 @@
         min-height: rem(120px);
       }
 
-      .media {
-        height: 241px;
-      }
-
-      .field--name-field-long-description {
+      .field--name-title {
         @include type-header(h4, black, included);
-        margin-top: 1.5rem;
-        min-height: 12.1875rem;
+        margin-top: 0;
+        text-transform: uppercase;
 
         @include media('<md') {
           font-size:  rem(16px);
@@ -73,13 +78,11 @@
       }
     }
 
-    .node__sku {
-      font-size: rem(14px);
-      margin: 0;
-
-      @include media('<md') {
-        font-size: rem(12px);
-      }
+    .node__summary {
+      display: -webkit-box;
+      -webkit-line-clamp: 5;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
   }
 
@@ -92,6 +95,11 @@
     font-size: 1rem !important;
     transition: $transition-base;
     width: 100%;
+
+    @include media('<md') {
+      white-space: normal;
+      min-width: 100%;
+    }
   }
 
   @include on-event {
