--- a/source/themes/custom/gearwrench/styles/libraries/view/view.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/view.scss
@@ -16,7 +16,11 @@
 
 .view {
   .pager {
-    margin-top: rem(60px);
+    margin: rem(60px 0);
+
+    .pager__items {
+      padding-left: 0;
+    }
 
     .pager__item {
       font-size: rem(14px);
