added margin-bottom to empty view, changed empty search text on search views

--- a/source/themes/custom/gearwrench/styles/libraries/view/search.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/search.scss
@@ -28,6 +28,10 @@
     }
   }
 
+  .view-empty {
+    margin-bottom: rem(30px);
+  }
+
   .view-content {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
