--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
@@ -81,6 +81,7 @@
 
           @include on-event() {
             color: $primary-red;
+            background-color: unset;
           }
 
           @include media('<sm') {
