updated file title.

--- a/source/themes/custom/gearwrench/styles/libraries/block/product-buy-now-sticky.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/block/product-buy-now-sticky.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// Block: Page Title Block
+// Block: Product: Buy Now Sticky
 // -----------------------------------------------------------------------------
 
 @import '../../globals';
